<resources>
    <string name="app_name">basic music player</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="dont_have_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="app_logo">App Logo</string>
    <string name="good_morning_user">Good morning, User!</string>
    <string name="recently_played">Recently played</string>
    <string name="made_for_you">Made for you</string>
    <string name="popular_playlists">Popular playlists</string>
    <string name="album_art">Album Art</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="share">Share</string>
    <string name="more_options">More options</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="downloads">Downloads</string>
    <string name="favorites">Favorites</string>
    <string name="create_playlist">Create playlist</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="playlist_cover">Playlist cover</string>
    <string name="album_cover">Album cover</string>
    <string name="playlist_details">Playlist Details</string>
    <string name="shuffle_play">Shuffle play</string>
    <string name="play_all">Play all</string>
    <string name="sort_songs">Sort songs</string>
    <string name="add_songs">Add songs</string>
    <string name="about_this_playlist">About this playlist</string>
    <string name="download_all">Download all</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="download">Download</string>

    <string name="search_hint">Search songs, artists, albums</string>
    <string name="quick_filters">Quick filters</string>
    <string name="all">All</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_all">Clear all</string>
    <string name="browse_categories">Browse categories</string>
    <string name="top_genres">Top genres</string>
    <string name="moods_activities">Moods &amp; Activities</string>
    <string name="popular_searches">Popular searches</string>
    <string name="trending_now">Trending now</string>
    <string name="no_results_found">No results found</string>
    <string name="try_different_search">Try a different search term</string>
    <string name="no_results">No results</string>
    <string name="recent_search">Recent search</string>
    <string name="remove">Remove</string>
    <string name="category_image">Category image</string>
    <string name="trending_item">Trending item</string>

    <string name="song_album_art">Song album art</string>
    <string name="now_playing">Now playing</string>
    <string name="play_song">Play song</string>
    <string name="favorited">Favorited</string>
    <string name="downloaded">Downloaded</string>
    <string name="offline">Offline</string>
    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="duration">Duration</string>

    <string name="now_playing_album_art">Now playing album art</string>
    <string name="now_playing_indicator">Now playing indicator</string>
    <string name="next_song">Next song</string>
    <string name="previous_song">Previous song</string>
    <string name="expand_player">Expand player</string>
    <string name="collapse_player">Collapse player</string>
    <string name="close_player">Close player</string>
    <string name="drag_to_move">Drag to move</string>
    <string name="mini_player">Mini player</string>
    <string name="swipe_up_for_full_player">Swipe up for full player</string>
    <string name="error_playing_track">Error Playing song</string>
</resources>