<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_queue"
        android:title="@string/add_to_queue"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:title="@string/download"
        android:icon="@drawable/ic_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>