<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.girigovardhan.basicmusicplayer.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.girigovardhan.basicmusicplayer.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.girigovardhan.basicmusicplayer.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.girigovardhan.basicmusicplayerui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Add other destinations like player, playlist details, etc. -->
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.girigovardhan.basicmusicplayer.ui.player.`PlayerFragment.kt`"
        android:label="Now Playing"
        tools:layout="@layout/fragment_player" />

</navigation>